# copilotkit_example

./: README.md  pyproject.toml
output/: complete_guide.md  guide_outline.json
src/copilotkit_flow/: main.py
src/copilotkit_flow/crews/content_crew/config/: agents.yaml
