[project]
name = "copilotkit_flow"
version = "0.1.0"
description = "copilotkit-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",
]

[project.scripts]
kickoff = "copilotkit_flow.main:kickoff"
run_crew = "copilotkit_flow.main:kickoff"
plot = "copilotkit_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
